--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,31 +1,24 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block content %}
-<h1>Create A New Post</h1>
-<form action ='/newpost' method = 'post'>
+<h1 style="color:blueviolet">Create a Blog Entry</h1>
+<form method="post">
     <table>
         <tr>
-            <td>
-            <label>
-                Create your title:</br>
-                <input type="text" name='title' value='{{title}}'/>
-                <p class="error">{{title_error}}</p>
-            </label>
-            </td>
-            <tr>
-                <td>
-                <label>
-                Write A New Blog Post:</br>
-                <textarea name="body" rows="12" cols="75" value='{{body}}'></textarea>
-                <p class="error">{{body_error}}</p>
-                </label>
-               </td>
-            </tr>
-           <tr>
-               <td>
-                    <input type="submit" value='Add Post' />
-               </td>
-           </tr>
-        </table> 
+        <label>
+            <td>Create a catchy title:</td>
+            <td><input name="title" type="text"></td>
+        </label>
+        </tr>
+        <tr><td></td><td><p class="error">{{ title_error }}</p></td></tr>
+        <tr>
+        <label>
+            <td>Your new blog!:</td>
+            <td><textarea name="body"></textarea></td>
+        </label>
+        </tr>
+        <tr><td></td><td><p class="error">{{ body_error }}</p></td></tr>
+        
+    </table>
+    <input type="submit" value="Add Entry">
 </form>
-
 {% endblock %}
