--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<h1 style="color:blueviolet"></h1>
 <h1>Signup Now</h1>
   <form action='/signup' method="post">
     <table>
