--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<h1 style="color:blueviolet"></h1>
 <h1>All Users</h1>
 
 {% for user in users %}
