--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 style="color:blueviolet"></h1>
-<h1>Login Here</h1>
+
+<h1 style="color:blueviolet">Login Here </h1>
   <form method="post">
     <table>
       <tr>
