--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
 <body> 
 
-    <a href="/">Home</a> | <a href="/blog">All Of Your Posts</a> | <a href="/newpost">Create A New Post</a> | <a href="/login">Login Here</a> | <a href="/logout">Logout Here</a>
+    <a href="/">Home</a> | <a href="/blog">All Posts</a> | <a href="/newpost">Create A New Post</a> | <a href="/login">Login Here</a> | <a href="/logout">Logout Here</a>
 
     {% block content %}
     {% endblock %}  
