--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,9 +7,13 @@
     <p>You currently have no blog posts. Want to add one now?</p>
 {% else %}
     {% for post in posts | reverse %}
-    
-    <h3><a href="/blog?id={{ post.id }}">{{ post.title }}</a></h3>
+<h3><a href="/blog?id={{ post.id }}">{{ post.title }}</a></h3>
     <p>{{ post.body }}</p>
+    {% for user in users %}
+        {%if post.owner_id == user.id %}
+            <p style="font-size: small">Written by <a href="/blog?user_id={{post.owner_id}}">{{ user.username }}</a></p>
+        {% endif %}
+    {% endfor %}
     <hr />
     {% endfor %}
 {% endif %}
