--- a/templates/viewpost.html
+++ b/templates/viewpost.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<h1> {{blog.title}} </h1>
+<h1> {{post.title}} </h1>
 <p>
-    {{blog.body}}
+    {{post.body}}
 </p>
-<p>Post by: <a href="/blog?user={{blog.owner_id}}">{{blog.owner.username}}</a></p>
+<p>Post by: <a href="/blog?user={{post.owner_id}}">{{post.owner.username}}</a></p>
 
 {% endblock %}
