--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -7,6 +7,10 @@
         <label>
             <td>Create a catchy title:</td>
             <td><input name="title" type="text"></td>
+            <td>
+                <input name="title" type="text" value="{{ title_stay }}">
+                <span class="error">{{ title_error }}</span>
+            </td>
         </label>
         </tr>
         <tr><td></td><td><p class="error">{{ title_error }}</p></td></tr>
@@ -14,6 +18,10 @@
         <label>
             <td>Your new blog!:</td>
             <td><textarea name="body"></textarea></td>
+            <td>
+                <input name="body" type="text" value="{{ body_stay }}">
+                <span class="error">{{ body_error }}</span>
+            </td>
         </label>
         </tr>
         <tr><td></td><td><p class="error">{{ body_error }}</p></td></tr>
