--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,7 +7,9 @@
       <tr>
         <td><label for="username">Create Username</label></td>
         <td>
-          <input name="username" type="text" value="{{username}}">
+            <input name="username" type="text" value="{{ username_stay }}">
+            <span class="error">{{ username_error }}</span>
+        </td>
           <span class="error">{{username_error}}</span>
         </td>
       </tr>
@@ -15,6 +17,10 @@
         <td><label for="password">Create Password</label></td>
         <td>
           <input name="password" type="password">
+          <td>
+            <input name="username" type="text" value="{{ username_stay }}">
+            <span class="error">{{ password_error }}</span>
+        </td>
           <span class="error">{{password_error}}</span>
         </td>
       </tr>
@@ -22,6 +28,10 @@
         <td><label for="verify">Verify Password</label></td>
         <td>
           <input name="verify" type="password">
+          <td>
+            <input name="password" type="text" value="{{ username_stay }}">
+            <span class="error">{{ verify_error }}</span>
+        </td>
           <span class="error">{{verify_error}}</span>
         </td>
       </tr>
