--- a/templates/login.html
+++ b/templates/login.html
@@ -7,14 +7,14 @@
       <tr>
         <td><label for="username">Enter your Username</label></td>
         <td>
-          <input name="username" type="text" value="">
-          <span class="error">{{username_error}}</span>
+          <input name="username" type="text" value="{{ username }}">
+            <span class="error">{{ username_error }}</span>
         </td>
         </tr>
       <tr>
         <td><label for="password">Enter your Password</label></td>
         <td>
-          <input name="password" type="password">
+          <input name="password" type="password" value="{{ username }}">
           <span class="error">{{password_error}}</span>
         </td>
       </tr>
